# snakemake-executor-plugin-slurm-jobstep

./: CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: post_to_mastodon.sh  release-please.yml
snakemake_executor_plugin_slurm_jobstep/: __init__.py
tests/: tests.py
tests/test_github_issue41/: Snakefile
