[tool.poetry]
name = "snakemake-executor-plugin-slurm-jobstep"
version = "0.1.1"
description = "A Snakemake executor plugin for running srun jobs inside of SLURM jobs (meant for internal use by snakemake-executor-plugin-slurm)"
authors = [
    "David Lähnemann <david.laehnemann@dkfz-heidelberg.de>",
    "Johannes Koester <johannes.koester@uni-due.de>",
    "Christian Meesters <meesters@uni-mainz.de>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
snakemake-interface-common = "^1.3.2"
snakemake-interface-executor-plugins = "^3.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
coverage = "^7.3.1"
pytest = "^7.4.2"
snakemake = {git = "https://github.com/snakemake/snakemake.git", branch = "feat/api-rewrite"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
